2006-04-13  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * When content cache is used also compiled shared memory functions

2006-04-11  Hans Rakers <hans at parse dot nl>

        * Fix for 64-bit compilation warnings "cast to pointer from
          integer of different size"

2006-04-11  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * A lot of fixes to silence the compile warnings generated when compiling
          with the default Fedora compiler options
        * Removed FC compiled options from Makefile.in again, stupid me 

2006-04-11  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Silenced the unlock function for win32 until a windows developer can
          take a look at it.
        * Updated the README a little more for the new control panel
        * Added release notes for beta2
        * Bumped up version to 0.9.5-beta2
        * Patch for dasm.php form Stadler, see #23
        * Fixed typo in optimizer which broke compilation for PHP != 5.1
        * Released beta2

2006-04-09  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fixed some typos in dasm.php
        * Added authentication to the disassembler

2006-04-06  Hans Rakers <hans at parse dot nl>

        * Fixed handling of interfaces. This fixes sf.net bug #1440575.
          This fix also introduces some changes in the cached object structure
          so remember to empty your disk caches if you have them. This is
          always a good thing to do after upgrading btw :)

2006-04-06  Hans Rakers <hans at parse dot nl>

        * Reverted the change to the handling of ZEND_BRK made by me on
          2006-03-17 since it wasn't working as it should. Since this
          reintroduces sf.net bug #1442923 i added some code to prevent this
          bug using a different approach, by restoring operand types changed
          by build_cfg if build_cfg exits with exit code 0.
