@@ -78,11 +78,6 @@ static void calc_property_info(zend_property_info * from TSRMLS_DC)
 	EACCELERATOR_ALIGN(EAG(mem));
 	EAG(mem) += sizeof(zend_property_info);
 	calc_string(from->name, from->name_length + 1 TSRMLS_CC);
-#ifdef ZEND_ENGINE_2_1
-	if (from->doc_comment != NULL) {
-		calc_string(from->doc_comment, from->doc_comment_len + 1 TSRMLS_CC);
-	}
-#endif
 }
 
 
@@ -262,10 +257,6 @@ void calc_op_array(zend_op_array * from TSRMLS_DC)
 #endif
 	if (from->filename != NULL)
 		calc_string(from->filename, strlen(from->filename) + 1 TSRMLS_CC);
-#ifdef ZEND_ENGINE_2
-	if (from->doc_comment != NULL)
-		calc_string(from->doc_comment, from->doc_comment_len + 1 TSRMLS_CC);
-#endif
 }
 
 /* Calculate the size of a class entry */
@@ -285,10 +276,8 @@ void calc_class_entry(zend_class_entry * from TSRMLS_DC)
 #ifdef ZEND_ENGINE_2
 	if (from->filename != NULL)
 		calc_string(from->filename, strlen(from->filename) + 1 TSRMLS_CC);
-	if (from->doc_comment != NULL)
-		calc_string(from->doc_comment, from->doc_comment_len + 1 TSRMLS_CC);
-
-	calc_zval_hash(&from->constants_table);
+	
+    calc_zval_hash(&from->constants_table);
 	calc_zval_hash(&from->default_properties);
 
 	calc_hash(&from->properties_info, (calc_bucket_t) calc_property_info);
@@ -728,9 +717,6 @@ eaccelerator_op_array *store_op_array(zend_op_array * from TSRMLS_DC)
 #ifdef ZEND_ENGINE_2
 	to->line_start = from->line_start;
 	to->line_end = from->line_end;
-	to->doc_comment_len = from->doc_comment_len;
-	if (from->doc_comment != NULL)
-		to->doc_comment = store_string(from->doc_comment, from->doc_comment_len + 1 TSRMLS_CC);
 #endif
 	return to;
 }
@@ -745,10 +731,8 @@ static zend_property_info *store_property_info(zend_property_info * from TSRMLS_
 	memcpy(to, from, sizeof(zend_property_info));
 	to->name = store_string(from->name, from->name_length + 1 TSRMLS_CC);
 #ifdef ZEND_ENGINE_2_1
-	to->doc_comment_len = from->doc_comment_len;
-	if (from->doc_comment != NULL) {
-		to->doc_comment = store_string(from->doc_comment, from->doc_comment_len + 1 TSRMLS_CC);
-	}
+	to->doc_comment_len = 0;
+	to->doc_comment = NULL;
 #endif
 	return to;
 }
@@ -892,12 +876,9 @@ eaccelerator_class_entry *store_class_entry(zend_class_entry * from TSRMLS_DC)
 #ifdef ZEND_ENGINE_2
 	to->line_start = from->line_start;
 	to->line_end = from->line_end;
-	to->doc_comment_len = from->doc_comment_len;
 
 	if (from->filename != NULL)
 		to->filename = store_string(from->filename, strlen(from->filename) + 1 TSRMLS_CC);
-	if (from->doc_comment != NULL)
-		to->doc_comment = store_string(from->doc_comment, from->doc_comment_len + 1 TSRMLS_CC);
 
 	store_zval_hash(&to->constants_table, &from->constants_table);
 	store_zval_hash(&to->default_properties, &from->default_properties);
