@@ -216,8 +216,6 @@ typedef struct _eaccelerator_op_array {
 #ifdef ZEND_ENGINE_2
 	zend_uint line_start;
 	zend_uint line_end;
-	char *doc_comment;
-	zend_uint doc_comment_len;
 #endif
 } eaccelerator_op_array;
 
@@ -242,8 +240,6 @@ typedef struct _eaccelerator_class_entry {
 	char *filename;
 	zend_uint line_start;
 	zend_uint line_end;
-	char *doc_comment;
-	zend_uint doc_comment_len;
 #endif
 } eaccelerator_class_entry;
 
