@@ -1,3 +1,8 @@
+2006-05-04  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
+
+        * Don't store the doc_comments in op_array and class_entry. They are 
+          useless. this should reduce memory footprint.
+
 2006-04-13  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
 
         * When content cache is used also compiled shared memory functions
